# relsim

./: .gitignore  LICENSE  README.md  push_to_huggingface.py  pyproject.toml  requirements.txt  setup.py  test.py
anonymous_caption/: anonymous_caption.py  anonymous_caption_hf.py  anonymous_caption_train.py  config.yaml  requirements.txt
anonymous_caption/lora-ckpt/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
data/: anonymous_captions_train_images  download_data.py  download_data.sh  download_seed_groups.py  push_to_hf.py  random_images_14k.jsonl  seed_group.json
plot_figure/: plot_baseline.py  plot_similarity_space.py  plot_user_study.py
relsim/: __init__.py  dataloader.py  get_embedding.py  push_to_huggingface.py  relsim_model.py  relsim_score.py  requirements_train.txt  train.sh  train_relsim.py
retrieval/: get_embedding_baseline.py  get_embedding_our.py  gpt4o_config.yaml  gptscore.py  pipeline.sh  retrieve_images.py  retrieve_topk_images.py  utils.py
